--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+main{
+  padding: 36px;
+}
 .header-container{
   display: flex;
   background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
@@ -33,3 +36,29 @@ code {
   font-weight: 500;
  font-size: 0.75rem; /* 12/16 rem*/
 }
+
+.meme-form{
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;;
+  gap: 17px;
+}
+.form-text{
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  border: 1px solid #D5D4D8;
+  text-indent: 5px;
+
+}
+.form-button{
+  grid-column: 1/ -1;
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.meme-image{
+  max-width: 100%;
+}
+
